src/parser/GraphicalParser.java
// Generated from C:/Users/Andrew/Desktop/Group19Project1/src/parser/GraphicalParser.g4 by ANTLR 4.13.1
package parser;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class GraphicalParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		LET_START=1, LET_OBJ_DECL=2, LET_OBJ_DECL_ALT=3, LET_OBJ_FIELDS=4, LET_OBJ_PLACEMENT=5, 
		LET_OBJ_RELATE=6, LET_OBJ_POSITION=7, SEP=8, AND_SEP=9, OXFORD_COMMA_SEP=10, 
		CONNECTOR=11, ASSIGNMENT=12, TUPLE_START=13, SHAPE_FIELD=14, COLOUR_FIELD=15, 
		SIZE_FIELD=16, OPACITY=17, OWNERSHIP=18, ROTATION_FIELD=19, SHEAR=20, 
		SCALE=21, ANIMATE_START=22, DURATION_LENGTH=23, ANIMATE_DURATION_SECONDS=24, 
		ANIMATE_DURATION_MINUTES=25, DRAW_START=26, REPEAT=27, OPENING_BRACE=28, 
		CLOSING_BRACE=29, IF=30, CURRENT_FRAME=31, THEN=32, ELSE=33, HAS=34, ASSERT=35, 
		WS=36, OBJECT=37, IMAGE=38, MESH=39, TEXT=40, NUMBER=41, TUPLE_VALUES=42, 
		TUPLE_DIMENSION=43, TUPLE_SEP=44, TUPLE_END=45, RED=46, BLACK=47, BLUE=48, 
		BROWN=49, GRAY=50, GREEN=51, ORANGE=52, PINK=53, PURPLE=54, WHITE=55, 
		YELLOW=56, HEX_VALUE=57, COLOUR_TUPLE_START=58, COLOUR_NUMBER=59, COLOUR_NUMBER_RGBA_DECIMAL=60, 
		COLOUR_SEP=61, COLOUR_TUPLE_END=62, COLOUR_TEXT=63, ROTATION_NUM=64, DEGREE=65, 
		RADIAN=66, ROTATION_UNIT=67, ROTATION_VALUE=68, CIRCLE=69, LINE=70, RECTANGLE=71, 
		SQUARE=72, TRIANGLE=73, SHAPE_TEXT=74, SIZE_NUMBER=75, SIZE_TUPLE=76;
	public static final int
		RULE_program = 0, RULE_expr = 1, RULE_let_expr = 2, RULE_let_config = 3, 
		RULE_let_instantiate = 4, RULE_id = 5, RULE_let_declare = 6, RULE_let_statement = 7, 
		RULE_let_object = 8, RULE_let_image = 9, RULE_verbal_sep = 10, RULE_let_object_assignment = 11, 
		RULE_object_assign = 12, RULE_shape_assign = 13, RULE_colour_assign = 14, 
		RULE_size_assign = 15, RULE_opacity_assign = 16, RULE_rotation_assign = 17, 
		RULE_shear_assign = 18, RULE_scale_assign = 19, RULE_let_ownership_assignment = 20, 
		RULE_ownership_assign = 21, RULE_let_image_assignment = 22, RULE_position_assign = 23, 
		RULE_function_expr = 24, RULE_animate_call = 25, RULE_draw_call = 26, 
		RULE_repeat_call = 27, RULE_if_expr = 28, RULE_then_expr = 29, RULE_else_expr = 30, 
		RULE_boolclause = 31, RULE_curr_frame_assert_expr = 32, RULE_assert_expr = 33, 
		RULE_tuple_statement = 34, RULE_shapes = 35, RULE_colours = 36, RULE_rgb_statement = 37, 
		RULE_rgba_statement = 38, RULE_sizes = 39, RULE_rotations = 40;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "expr", "let_expr", "let_config", "let_instantiate", "id", 
			"let_declare", "let_statement", "let_object", "let_image", "verbal_sep", 
			"let_object_assignment", "object_assign", "shape_assign", "colour_assign", 
			"size_assign", "opacity_assign", "rotation_assign", "shear_assign", "scale_assign", 
			"let_ownership_assignment", "ownership_assign", "let_image_assignment", 
			"position_assign", "function_expr", "animate_call", "draw_call", "repeat_call", 
			"if_expr", "then_expr", "else_expr", "boolclause", "curr_frame_assert_expr", 
			"assert_expr", "tuple_statement", "shapes", "colours", "rgb_statement", 
			"rgba_statement", "sizes", "rotations"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, "'object'", "'image'", "'mesh'", null, null, null, null, null, 
			null, "'red'", "'black'", "'blue'", "'brown'", null, "'green'", "'orange'", 
			"'pink'", "'purple'", "'white'", "'yellow'", null, null, null, null, 
			null, null, null, null, null, null, null, null, "'circle'", "'line'", 
			"'rectangle'", "'square'", "'triangle'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "LET_START", "LET_OBJ_DECL", "LET_OBJ_DECL_ALT", "LET_OBJ_FIELDS", 
			"LET_OBJ_PLACEMENT", "LET_OBJ_RELATE", "LET_OBJ_POSITION", "SEP", "AND_SEP", 
			"OXFORD_COMMA_SEP", "CONNECTOR", "ASSIGNMENT", "TUPLE_START", "SHAPE_FIELD", 
			"COLOUR_FIELD", "SIZE_FIELD", "OPACITY", "OWNERSHIP", "ROTATION_FIELD", 
			"SHEAR", "SCALE", "ANIMATE_START", "DURATION_LENGTH", "ANIMATE_DURATION_SECONDS", 
			"ANIMATE_DURATION_MINUTES", "DRAW_START", "REPEAT", "OPENING_BRACE", 
			"CLOSING_BRACE", "IF", "CURRENT_FRAME", "THEN", "ELSE", "HAS", "ASSERT", 
			"WS", "OBJECT", "IMAGE", "MESH", "TEXT", "NUMBER", "TUPLE_VALUES", "TUPLE_DIMENSION", 
			"TUPLE_SEP", "TUPLE_END", "RED", "BLACK", "BLUE", "BROWN", "GRAY", "GREEN", 
			"ORANGE", "PINK", "PURPLE", "WHITE", "YELLOW", "HEX_VALUE", "COLOUR_TUPLE_START", 
			"COLOUR_NUMBER", "COLOUR_NUMBER_RGBA_DECIMAL", "COLOUR_SEP", "COLOUR_TUPLE_END", 
			"COLOUR_TEXT", "ROTATION_NUM", "DEGREE", "RADIAN", "ROTATION_UNIT", "ROTATION_VALUE", 
			"CIRCLE", "LINE", "RECTANGLE", "SQUARE", "TRIANGLE", "SHAPE_TEXT", "SIZE_NUMBER", 
			"SIZE_TUPLE"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "GraphicalParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public GraphicalParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(GraphicalParser.EOF, 0); }
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GraphicalParserListener ) ((GraphicalParserListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GraphicalParserListener ) ((GraphicalParserListener)listener).exitProgram(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GraphicalParserVisitor ) return ((GraphicalParserVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(85);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 1279262722L) != 0)) {
				{
				{
				setState(82);
				expr();
				}
				}
				setState(87);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(88);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ExprContext extends ParserRuleContext {
		public Let_exprContext let_expr() {
			return getRuleContext(Let_exprContext.class,0);
		}
		public Function_exprContext function_expr() {
			return getRuleContext(Function_exprContext.class,0);
		}
		public If_exprContext if_expr() {
			return getRuleContext(If_exprContext.class,0);
		}
		public ExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expr; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GraphicalParserListener ) ((GraphicalParserListener)listener).enterExpr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GraphicalParserListener ) ((GraphicalParserListener)listener).exitExpr(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GraphicalParserVisitor ) return ((GraphicalParserVisitor<? extends T>)visitor).visitExpr(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ExprContext expr() throws RecognitionException {
		ExprContext _localctx = new ExprContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_expr);
		try {
			setState(93);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case LET_START:
				enterOuterAlt(_localctx, 1);
				{
				setState(90);
				let_expr();
				}
				break;
			case ANIMATE_START:
			case DRAW_START:
			case REPEAT:
				enterOuterAlt(_localctx, 2);
				{
				setState(91);
				function_expr();
				}
				break;
			case IF:
				enterOuterAlt(_localctx, 3);
				{
				setState(92);
				if_expr();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Let_exprContext extends ParserRuleContext {
		public TerminalNode LET_START() { return getToken(GraphicalParser.LET_START, 0); }
		public IdContext id() {
			return getRuleContext(IdContext.class,0);
		}
		public Let_configContext let_config() {
			return getRuleContext(Let_configContext.class,0);
		}
		public Let_exprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_let_expr; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GraphicalParserListener ) ((GraphicalParserListener)listener).enterLet_expr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GraphicalParserListener ) ((GraphicalParserListener)listener).exitLet_expr(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GraphicalParserVisitor ) return ((GraphicalParserVisitor<? extends T>)visitor).visitLet_expr(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Let_exprContext let_expr() throws RecognitionException {
		Let_exprContext _localctx = new Let_exprContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_let_expr);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(95);
			match(LET_START);
			setState(96);
			id();
			setState(97);
			let_config();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Let_configContext extends ParserRuleContext {
		public Let_instantiateContext let_instantiate() {
			return getRuleContext(Let_instantiateContext.class,0);
		}
		public Let_ownership_assignmentContext let_ownership_assignment() {
			return getRuleContext(Let_ownership_assignmentContext.class,0);
		}
		public Let_configContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_let_config; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GraphicalParserListener ) ((GraphicalParserListener)listener).enterLet_config(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GraphicalParserListener ) ((GraphicalParserListener)listener).exitLet_config(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GraphicalParserVisitor ) return ((GraphicalParserVisitor<? extends T>)visitor).visitLet_config(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Let_configContext let_config() throws RecognitionException {
		Let_configContext _localctx = new Let_configContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_let_config);
		try {
			setState(101);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case LET_OBJ_DECL:
			case LET_OBJ_DECL_ALT:
				enterOuterAlt(_localctx, 1);
				{
				setState(99);
				let_instantiate();
				}
				break;
			case OWNERSHIP:
				enterOuterAlt(_localctx, 2);
				{
				setState(100);
				let_ownership_assignment();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Let_instantiateContext extends ParserRuleContext {
		public Let_declareContext let_declare() {
			return getRuleContext(Let_declareContext.class,0);
		}
		public Let_statementContext let_statement() {
			return getRuleContext(Let_statementContext.class,0);
		}
		public Let_instantiateContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_let_instantiate; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GraphicalParserListener ) ((GraphicalParserListener)listener).enterLet_instantiate(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GraphicalParserListener ) ((GraphicalParserListener)listener).exitLet_instantiate(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GraphicalParserVisitor ) return ((GraphicalParserVisitor<? extends T>)visitor).visitLet_instantiate(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Let_instantiateContext let_instantiate() throws RecognitionException {
		Let_instantiateContext _localctx = new Let_instantiateContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_let_instantiate);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(103);
			let_declare();
			setState(104);
			let_statement();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class IdContext extends ParserRuleContext {
		public TerminalNode TEXT() { return getToken(GraphicalParser.TEXT, 0); }
		public IdContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_id; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GraphicalParserListener ) ((GraphicalParserListener)listener).enterId(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GraphicalParserListener ) ((GraphicalParserListener)listener).exitId(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GraphicalParserVisitor ) return ((GraphicalParserVisitor<? extends T>)visitor).visitId(this);
			else return visitor.visitChildren(this);
		}
	}

	public final IdContext id() throws RecognitionException {
		IdContext _localctx = new IdContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_id);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(106);
			match(TEXT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Let_declareContext extends ParserRuleContext {
		public TerminalNode LET_OBJ_DECL() { return getToken(GraphicalParser.LET_OBJ_DECL, 0); }
		public TerminalNode LET_OBJ_DECL_ALT() { return getToken(GraphicalParser.LET_OBJ_DECL_ALT, 0); }
		public Let_declareContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_let_declare; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GraphicalParserListener ) ((GraphicalParserListener)listener).enterLet_declare(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GraphicalParserListener ) ((GraphicalParserListener)listener).exitLet_declare(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GraphicalParserVisitor ) return ((GraphicalParserVisitor<? extends T>)visitor).visitLet_declare(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Let_declareContext let_declare() throws RecognitionException {
		Let_declareContext _localctx = new Let_declareContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_let_declare);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(108);
			_la = _input.LA(1);
			if ( !(_la==LET_OBJ_DECL || _la==LET_OBJ_DECL_ALT) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Let_statementContext extends ParserRuleContext {
		public Let_objectContext let_object() {
			return getRuleContext(Let_objectContext.class,0);
		}
		public Let_imageContext let_image() {
			return getRuleContext(Let_imageContext.class,0);
		}
		public IdContext id() {
			return getRuleContext(IdContext.class,0);
		}
		public Let_statementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_let_statement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GraphicalParserListener ) ((GraphicalParserListener)listener).enterLet_statement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GraphicalParserListener ) ((GraphicalParserListener)listener).exitLet_statement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GraphicalParserVisitor ) return ((GraphicalParserVisitor<? extends T>)visitor).visitLet_statement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Let_statementContext let_statement() throws RecognitionException {
		Let_statementContext _localctx = new Let_statementContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_let_statement);
		try {
			setState(113);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case OBJECT:
				enterOuterAlt(_localctx, 1);
				{
				setState(110);
				let_object();
				}
				break;
			case IMAGE:
				enterOuterAlt(_localctx, 2);
				{
				setState(111);
				let_image();
				}
				break;
			case TEXT:
				enterOuterAlt(_localctx, 3);
				{
				setState(112);
				id();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Let_objectContext extends ParserRuleContext {
		public TerminalNode OBJECT() { return getToken(GraphicalParser.OBJECT, 0); }
		public Let_object_assignmentContext let_object_assignment() {
			return getRuleContext(Let_object_assignmentContext.class,0);
		}
		public Let_objectContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_let_object; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GraphicalParserListener ) ((GraphicalParserListener)listener).enterLet_object(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GraphicalParserListener ) ((GraphicalParserListener)listener).exitLet_object(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GraphicalParserVisitor ) return ((GraphicalParserVisitor<? extends T>)visitor).visitLet_object(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Let_objectContext let_object() throws RecognitionException {
		Let_objectContext _localctx = new Let_objectContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_let_object);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(115);
			match(OBJECT);
			setState(116);
			let_object_assignment();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Let_imageContext extends ParserRuleContext {
		public TerminalNode IMAGE() { return getToken(GraphicalParser.IMAGE, 0); }
		public TerminalNode LET_OBJ_RELATE() { return getToken(GraphicalParser.LET_OBJ_RELATE, 0); }
		public IdContext id() {
			return getRuleContext(IdContext.class,0);
		}
		public Let_image_assignmentContext let_image_assignment() {
			return getRuleContext(Let_image_assignmentContext.class,0);
		}
		public Let_imageContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_let_image; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GraphicalParserListener ) ((GraphicalParserListener)listener).enterLet_image(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GraphicalParserListener ) ((GraphicalParserListener)listener).exitLet_image(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GraphicalParserVisitor ) return ((GraphicalParserVisitor<? extends T>)visitor).visitLet_image(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Let_imageContext let_image() throws RecognitionException {
		Let_imageContext _localctx = new Let_imageContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_let_image);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(118);
			match(IMAGE);
			setState(119);
			match(LET_OBJ_RELATE);
			setState(120);
			id();
			setState(121);
			let_image_assignment();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Verbal_sepContext extends ParserRuleContext {
		public TerminalNode SEP() { return getToken(GraphicalParser.SEP, 0); }
		public TerminalNode AND_SEP() { return getToken(GraphicalParser.AND_SEP, 0); }
		public TerminalNode OXFORD_COMMA_SEP() { return getToken(GraphicalParser.OXFORD_COMMA_SEP, 0); }
		public Verbal_sepContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_verbal_sep; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GraphicalParserListener ) ((GraphicalParserListener)listener).enterVerbal_sep(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GraphicalParserListener ) ((GraphicalParserListener)listener).exitVerbal_sep(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GraphicalParserVisitor ) return ((GraphicalParserVisitor<? extends T>)visitor).visitVerbal_sep(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Verbal_sepContext verbal_sep() throws RecognitionException {
		Verbal_sepContext _localctx = new Verbal_sepContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_verbal_sep);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(123);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & 1792L) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Let_object_assignmentContext extends ParserRuleContext {
		public TerminalNode LET_OBJ_FIELDS() { return getToken(GraphicalParser.LET_OBJ_FIELDS, 0); }
		public List<Object_assignContext> object_assign() {
			return getRuleContexts(Object_assignContext.class);
		}
		public Object_assignContext object_assign(int i) {
			return getRuleContext(Object_assignContext.class,i);
		}
		public List<Verbal_sepContext> verbal_sep() {
			return getRuleContexts(Verbal_sepContext.class);
		}
		public Verbal_sepContext verbal_sep(int i) {
			return getRuleContext(Verbal_sepContext.class,i);
		}
		public Let_object_assignmentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_let_object_assignment; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GraphicalParserListener ) ((GraphicalParserListener)listener).enterLet_object_assignment(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GraphicalParserListener ) ((GraphicalParserListener)listener).exitLet_object_assignment(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GraphicalParserVisitor ) return ((GraphicalParserVisitor<? extends T>)visitor).visitLet_object_assignment(this);
			else return visitor.visitChildren(this);
		}
	}
